# ghost

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README.md.bak.20260317072009  README.md.bak.20260317072352  V2_PLAN.md  __init__.py  __init__.py.bak.20260317072406  __init__.py.bak.20260317084007  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
ai/: __init__.py  __init__.py.bak.20260317073434  __init__.py.bak.20260317084025  analyzer.py.bak.20260317072926  analyzer.py.bak.20260317073455  summarizer.py  summarizer.py.bak.20260317071252  summarizer.py.bak.20260317072945
backend/: __init__.py  db.py  server.py  server.py.bak.20260317071301
core/: __init__.py  __init__.py.bak.20260317073158  config.py.bak.20260317073043  correlator.py  correlator.py.bak.20260317071320  correlator.py.bak.20260317073054  investigator.py.bak.20260317073118  report_generator.py  report_generator.py.bak.20260317073144
docs/: issue-1-response.md  self-audit-demo.md  storage-adapter-boundary.md
experiments/: data_exploration.ipynb  linear_regression.ipynb  logistic_regression.ipynb  visualization.ipynb
ghost/: __init__.py  __main__.py
ghost/ai/: __init__.py  analyzer.py  summarizer.py
ghost/backend/: db.py  server.py
ghost/core/: config.py  correlator.py  doctor.py  investigator.py  report_generator.py
ghost/modules/: darkweb.py  domain.py  email.py  geolocation.py  image.py  phone.py  social.py  username.py
ghost/ui/: __init__.py  cli.py
modules/: __init__.py  __init__.py.bak.20260317071943  darkweb.py  email.py.bak.20260317071605  geolocation.py  geolocation.py.bak.20260317071629  image.py  image.py.bak.20260317072839  phone.py  phone.py.bak.20260317071711  social.py.bak.20260317071727  username.py.bak.20260317071750  username.py.bak.20260317072851
templates/: report.html
tests/: __init__.py  __init__.py.bak.20260317071952  test_investigator.py  test_modules.py
ui/: __init__.py
