[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-osint"
version = "0.1.0"
description = "AI-Powered OSINT Investigation Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Julio"},
]
keywords = ["osint", "intelligence", "security", "investigation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "openai>=1.6.0",
    "phonenumbers>=8.13.0",
    "dnspython>=2.4.2",
    "beautifulsoup4>=4.12.2",
    "Pillow>=10.1.0",
    "exifread>=3.0.0",
    "jinja2>=3.1.2",
    "geopy>=2.4.1",
]

[project.optional-dependencies]
full = [
    "sherlock-project>=0.14.3",
    "weasyprint>=60.1",
    "networkx>=3.2.1",
    "folium>=0.15.1",
    "ipinfo>=5.0.1",
    "flask-socketio>=5.3.6",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
ghost = "ghost.ui.cli:main"

[project.urls]
Homepage = "https://github.com/juliosuas/ghost"
Repository = "https://github.com/juliosuas/ghost"
Issues = "https://github.com/juliosuas/ghost/issues"

[tool.setuptools.packages.find]
include = ["ghost*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
